Adicionado paragrafo sobre os Novos Amigos da Trybe

--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/Exercicio-bloco-3-dia-01.html
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/Exercicio-bloco-3-dia-01.html
@@ -15,7 +15,18 @@
         <li>Lucas Cavalheri</li>
     </ul>
     <img src="https://s1.static.brasilescola.uol.com.br/be/vestibular/mercado-trabalho-para-profissional-cinencias-computacao-5a01b6d7c735f.jpg" alt="Imagens online computação" width="200px">
-    
+    <h5>Anays Lima</h5>
+    <p>Conheci através da dinâmica e se mostrou muito disposta a ajudar!<br>
+        Parece ser uma pessoa bem dedicada</p>
+    <h5>Ellen Sampaio</h5>
+    <p>Também conheci através da dinâmica de softskilss e me pareceu ser uma pessoa comprometida<br>
+    Muito participativa e atenta aos conteúdos.</p>
+    <h5>Henrique Pedra</h5>
+    <p>Pela ultima dinâmica de softskills me pareceu ser uma pessoa muito dedicada e estudiosa.<br>
+    Também responsavél pela apresentação do grupo, com boa comunicação e conhecimento do assunto!</p>
+    <h5>Lucas Cavalheri</h5>
+    <p>Se demonstrou muito participativo na dinâmica e também demonstrou conhecimento do conteúdo.<br>
+    Participativo e também uma boa comunicação!</p>
 
   </body>
 </html>
