Adicionado link para Google

--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/Exercicio-bloco-3-dia-01.html
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/Exercicio-bloco-3-dia-01.html
@@ -27,6 +27,8 @@
     <h5>Lucas Cavalheri</h5>
     <p id="Lucas C">Se demonstrou muito participativo na dinâmica e também demonstrou conhecimento do conteúdo.<br>
     Participativo e também uma boa comunicação!</p>
+    <br>
+    <a href="https://www.google.com/" target="_blank" >LINK PARA O GOOGLE </a>
 
   </body>
 </html>
