--- a/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -8,6 +8,9 @@
         font-size: 65px;
         color: orange
     }
+    ul {
+        background-color: orangered;
+    }
     </style>
   </head>
   <body>
