Criado classe para alterar background 'p' e 'ul'

--- a/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -11,12 +11,15 @@
     ul {
         background-color: orangered;
     }
+    .mude{
+        background-color:orchid;
+    }
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul>
+    <p class="mude">Qual é a sua cor favorita?</p>
+    <ul class="mude">
       <li>Amarelo</li>
       <li>Vermelho</li>
       <li>Marrom</li>
