--- a/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -6,7 +6,8 @@
     <style>
     h1 {
         font-size: 65px;
-        color: orange
+        color: orange;
+        font-family: sans-serif;
     }
     ul {
         background-color: orangered;
