Alteração no tamanho da letra no body e paragrafo

--- a/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -9,6 +9,13 @@
         color: orange;
         font-family: sans-serif;
     }
+    p {
+        font-weight: 600;
+        font-size: 3em;
+    }
+    body {
+        font-size: 16px;
+    }
     ul {
         background-color: orangered;
     }
