--- a/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -12,12 +12,14 @@
     p {
         font-weight: 600;
         font-size: 3em;
+        font-style: oblique;
     }
     body {
         font-size: 16px;
     }
     ul {
         background-color: orangered;
+        line-height: 30px;
     }
     .mude{
         background-color:orchid;
