--- a/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -8,15 +8,18 @@
         font-size: 65px;
         color: orange;
         font-family: sans-serif;
+        text-align: center;
     }
     p {
         font-weight: 600;
         font-size: 3em;
         font-style: oblique;
+        text-align: center;
+        text-decoration: underline;
     }
     body {
         font-size: 16px;
-        text-align: center;
+       ;
     }
     ul {
         background-color: orangered;
