--- a/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-3-html-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -34,9 +34,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="mude">Qual é a sua cor favorita?</p>
     <ul class="mude">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li style="background-color:yellow">Amarelo</li>
+      <li style="background-color:red">Vermelho</li>
+      <li style="background-color:brown">Marrom</li>
     </ul>
   </body>
 </html>
