--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-4-css-semantica/index.html
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-4-css-semantica/index.html
@@ -17,7 +17,7 @@
         <li class="third">3º - Equipe 3</li>
       </ul>
     </section>
-    <section>
+    <main>
       <h3>Premiação Primeiro Lugar:</h3>
       <ul>
         <li>| R$ 1000,00 por integrante da equipe |</li>
@@ -33,6 +33,6 @@
         <li>| R$ 300,00 por integrante da equipe |</li>
         <li>| Participação no processo seletivo para o Bootcamp |</li>
       </ul>
-    </section>
+    </main>
   </body>
 </html>
