--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-4-css-semantica/index.html
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-4-css-semantica/index.html
@@ -17,8 +17,10 @@
         <li class="third">3º - Equipe 3</li>
       </ul>
     </section>
-    <main>
+    <main class="main1">
+        <article class="premios">
       <h3>Premiação Primeiro Lugar:</h3>
+      <section class="section2">
       <ul>
         <li>| R$ 1000,00 por integrante da equipe |</li>
         <li>| Bootcamp de 2 meses com possibilidade de contratação |</li>
@@ -32,7 +34,7 @@
       <ul>
         <li>| R$ 300,00 por integrante da equipe |</li>
         <li>| Participação no processo seletivo para o Bootcamp |</li>
-      </ul>
+      </ul></section></article>
     </main>
   </body>
 </html>
